content/terraform-enterprise/1.0.x/docs/enterprise/api-docs/changelog.mdx
---
page_title: API Changelog for Terraform Enterprise
page_id: api-changelog
description: >-
  Use this log of Terraform Enterprise API changes to track new features and
  evolving functionality over time.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-11T21:14:21-07:00
last_modified: 2025-11-19T09:33:54-08:00
# END AUTO GENERATED METADATA
---

# API Changelog

Keep track of changes to the API for HCP Terraform and Terraform Enterprise.

## 2025-07-11

-   Update existing [workspaces API documentation](/terraform/enterprise/api-docs/workspaces) to reflect that a workspace's default execution mode now matches the project and not the organization default.
-   Update existing [projects API documentation](/terraform/enterprise/api-docs/projects) to include `default-execution-mode`, `default-agent-pool`, and `settings-overwrites` for projects.
-   Update existing [agent pools API documentation](/terraform/enterprise/api-docs/agents) to include new agent pool scoping options, including adding allowed projects and adding exclusions for workspaces.

## 2025-05-1

-   Add `agent-pool` relationship to the [run task API](/terraform/enterprise/api-docs/run-tasks/run-tasks), which you can use to assign a run task to an agent pool.
    <!-- BEGIN: TFC:only name:premium -->
-   Add `private-run-tasks` to [feature entitlements](/terraform/enterprise/api-docs#feature-entitlements).
    <!-- END: TFC:only name:premium -->
-   You can now revoke, and revert the revocation of, module versions. Learn more about [Managing module versions](/terraform/enterprise/api-docs/private-registry/manage-module-versions).

## 2025-4-17

-   Document inherited-from link associated with effective tag bindings.

## 2025-03-20

-   Add API documentation for multiple [team tokens](/terraform/enterprise/users-teams-organizations/api-tokens#team-api-tokens), and update documentation around [legacy team tokens](/terraform/enterprise/api-docs/team-tokens##legacy-team-tokens-api-reference).
-   Update existing API documentation for [team tokens](/terraform/enterprise/api-docs/team-tokens) to distinguish multiple team tokens from [legacy team tokens](/terraform/enterprise/api-docs/team-tokens##legacy-team-tokens-api-reference).

## 2025-3-10

-   Document unique pagination metadata given in the response of [Organization Runs Index API](/terraform/enterprise/api-docs/run##list-runs-in-an-organization).

<!-- BEGIN: TFC:only name:explorer -->

## 2025-03-10

-   Add new field `current_rum_count` to the [explorer API](/terraform/enterprise/api-docs/explorer) in the `workspaces` view type that lists a workspace's current resources under management.
    <!-- END: TFC:only name:explorer -->

## 2024-11-19

-   Clarify `tag-bindings` and `effective-tag-bindings` on [workspaces](/terraform/enterprise/api-docs/workspaces) and [projects](/terraform/enterprise/api-docs/projects)
-   Adds new documentation for `PATCH`ing tag bindings on [projects](/terraform/enterprise/api-docs/projects) and [workspaces](/terraform/enterprise/api-docs/workspaces)

## 2024-10-15

-   Add new documentation for the ability to deprecate, and revert the deprecation of, module versions. Learn more about [Managing module versions](/terraform/enterprise/api-docs/private-registry/manage-module-versions).

## 2024-10-14

-   Update the [Organizations API](/terraform/enterprise/api-docs/organizations) to support the `speculative-plan-management-enabled` attribute, which controls [automatic cancellation of plan-only runs triggered by outdated commits](/terraform/enterprise/users-teams-organizations/organizations/vcs-speculative-plan-management).

## 2024-10-11

-   Add documentation for new timeframe filter on List endpoints for [Runs](/terraform/enterprise/api-docs/run) API

## 2024-09-02

-   Add warning about the deprecation and future removal of the [Policy Checks](/terraform/enterprise/api-docs/policy-checks) API.

## 2024-08-16

-   Fixes Workspace API responses to be consistent and contain all attributes and relationships.

## 2024-08-14

-   Add documentation for a new API endpoint that lists an [organization's team tokens](/terraform/enterprise/api-docs/team-tokens).

## 2024-08-01

<EnterpriseAlert>
This endpoint is exclusive to Terraform Enterprise, and not available in HCP Terraform.
</EnterpriseAlert>

-   Update the [admin settings API](/terraform/enterprise/api-docs/admin/settings##update-general-settings) and [admin organizations API](/terraform/enterprise/api-docs/admin/organizations#update-an-organization) to indicate that the `terraform-build-worker-plan-timeout` and `terraform-build-worker-apply-timeout` attributes are deprecated and will be replaced by `plan-timeout` and `apply-timeout`, respectively.

<!-- BEGIN: TFC:only name:audit-trail-tokens -->

## 2024-07-24

-   Remove beta tags from documentation for audit trail tokens.
    <!-- END: TFC:only name:audit-trail-tokens -->

## 2024-07-15

-   Update the [Team API](/terraform/enterprise/api-docs/teams) to include `allow-member-token-management`.

<!-- BEGIN: TFC:only name:audit-trail-tokens -->

## 2024-07-12

-   Add beta tags to documentation for audit trail tokens.
    <!-- END: TFC:only name:audit-trail-tokens -->

## 2024-06-25

-   Add API documentation for new [team token management setting](/terraform/enterprise/users-teams-organizations/api-tokens).
-   Update API documentation for the [manage teams permission](/terraform/enterprise/users-teams-organizations/permissions#team-management-permissions).

<!-- BEGIN: TFC:only name:audit-trail-tokens -->
## 2024-05-29

-   Add API documentation for the new [audit trails token](/terraform/enterprise/api-docs/audit-trails-tokens).

    <!-- END: TFC:only name:audit-trail-tokens -->

## 2024-05-23

-   Update the [registry modules API](/terraform/enterprise/api-docs/private-registry/modules#create-a-module-version) for publishing new versions of branch based modules.

## 2024-05-10

-   Add API documentation for new [manage agent pools permission](/terraform/enterprise/users-teams-organizations/permissions#manage-agent-pools).

## 2024-04-25

-   Project names can now be up to 40 characters.

## 2024-04-08

-   Add API documentation for new [team management permissions](/terraform/enterprise/users-teams-organizations/permissions#team-management-permissions).

## 2024-04-04

-   Add a `sort` parameter to the [Projects list API](/terraform/enterprise/api-docs/projects#query-parameters) to allow sorting projects by name.
-   Add a `description` attribute to the [Projects API](/terraform/enterprise/api-docs/projects).
-   Add `project-count` and `workspace-count` attributes to sample [Projects API](/terraform/enterprise/api-docs/projects) responses.

## 2024-3-27

-   Add `private-vcs` to [Feature Entitlements](/terraform/enterprise/api-docs#feature-entitlements).

## 2024-3-26

-   Add API documentation for searching [variable sets](/terraform/enterprise/api-docs/variable-sets#list-variable-sets) by name.

## 2024-3-14

-   Add documentation for creating runs with debugging mode enabled.

## 2024-3-12

-   Update OAuth Client API endpoints to create, update, and return projects associated with an oauth client.
-   Add API endpoints to [Attach an OAuth Client](/terraform/enterprise/api-docs/oauth-clients#attach-an-oauth-client-to-projects) and [Detach an OAuth Client](/terraform/enterprise/api-docs/oauth-clients#detach-an-oauth-client-from-projects) from a project.
-   Add `organization-scoped` attribute to the [OAuth Clients API](/terraform/enterprise/api-docs/oauth-clients).

## 2024-2-29

-   Update [run task stages](/terraform/enterprise/api-docs/run-tasks/run-task-stages-and-results) with new multi-stage payload format.
-   Update [run tasks](/terraform/enterprise/api-docs/run-tasks/run-tasks) with global run tasks request/response payloads.

## 2024-2-27

-   Add `private-policy-agents` to [Feature Entitlements](/terraform/enterprise/api-docs#feature-entitlements).

## 2024-2-20

-   Add documentation for configuring organization and workspace data retention policies through the API and on the different [types of data retention policies](/terraform/enterprise/api-docs/data-retention-policies).
    <!-- BEGIN: TFC:only name:explorer -->

## 2024-2-8

-   Add [Explorer API documentation](/terraform/enterprise/api-docs/explorer)
    <!-- END: TFC:only name:explorer -->

## 2024-1-30

-   Update the [Audit trails](/terraform/enterprise/api-docs/audit-trails) documentation to expand on the payloads for each event.

## 2024-1-24

-   Introduce configurable data retention policies at the site-wide level and extend data retention policies at the organization and workspace levels.
-   Added and/or updated data retention policy documentation to the following topics:
    -   [Admin Settings Documentation](/terraform/enterprise/application-administration/general#data-retention-policies)
    -   [Admin API Documentation](/terraform/enterprise/api-docs/admin/settings#data-retention-policies)
    -   [Organization Documentation](/terraform/enterprise/users-teams-organizations/organizations#data-retention-policies)
    -   [Workspace Documentation](/terraform/enterprise/workspaces/settings/deletion#data-retention-policies)

## 2024-1-4

-   Update the [Organizations API](/terraform/enterprise/api-docs/organizations) to support the `aggregated-commit-status-enabled` attribute, which controls whether [Aggregated Status Checks](/terraform/enterprise/users-teams-organizations/organizations/vcs-status-checks) are enabled.

## 2023-11-17

-   Added the [`opa-versions` endpoint](/terraform/enterprise/api-docs/admin/opa-versions) to allow administrators to manage available Open Policy Agent (OPA) versions.
-   Added the [`sentinel-versions` endpoint](/terraform/enterprise/api-docs/admin/sentinel-versions) to allow administrators to manage available Sentinel versions.
-   Add `authenticated-resource` relationship to the [`account` API](/terraform/enterprise/api-docs/account).

## 2023-11-15

-   Introduce configurable data retention policies at the [organization](/terraform/enterprise/users-teams-organizations/organizations#data-retention-policies) and [workspace](/terraform/enterprise/workspaces/settings/deletion#data-retention-policies) levels.
-   Added data retention policy documentation to the following topics:
    -   [`state-versions` API documentation](/terraform/enterprise/api-docs/state-versions)
    -   [`configuration-versions` API documentation](/terraform/enterprise/api-docs/configuration-versions)
    -   [Organizations documentation](/terraform/enterprise/users-teams-organizations/organizations#destruction-and-deletion)
    -   [Workspaces documentation](/terraform/enterprise/workspaces/settings/deletion#data-retention-policies)

## 2023-11-07

-   Add `auto_destroy_activity_duration` to the [Workspaces API](/terraform/enterprise/api-docs/workspaces), which allows Terraform Cloud to schedule auto-destroy runs [based on workspace inactivity](/terraform/enterprise/workspaces/settings/deletion#automatically-destroy).

## 2023-10-31

-   Update the [Workspaces API](/terraform/enterprise/api-docs/workspaces) to support the `auto-apply-run-trigger` attribute, which controls if run trigger runs are auto-applied.

## 2023-10-30

-   Add `priority` attribute to the [Variable Sets API](/terraform/enterprise/api-docs/variable-sets).

## 2023-10-04

-   Updates to [run task integration API](/terraform/enterprise/api-docs/run-tasks/run-tasks-integration)
    -   Fix invalid JSON in the example payload.
    -   Clarify the expected JSON:API payload fields.
-   Add `policy-tool-version` attribute to [Policy Set Outcomes](/terraform/enterprise/api-docs/policy-evaluations#list-policy-outcomes).

## 2023-10-03

-   Update [Policy Sets API](/terraform/enterprise/api-docs/policy-sets) to include `agent-enabled` and `policy-tool-version`.
-   Update [Policy Evaluations API](/terraform/enterprise/api-docs/policy-evaluations) to include `policy-tool-version`.

## 2023-09-29

-   Add support for [streamlined run task reviews](/terraform/enterprise/integrations/run-tasks), enabling run task integrations to return high fidelity results.
    -   Update the [Terraform cloud run task API](/terraform/enterprise/api-docs/run-tasks/run-tasks) to enable streamlined run task reviews.
    -   The [run task integration API](/terraform/enterprise/api-docs/run-tasks/run-tasks-integration) now guides integrations through sending rich results.
    -   Updated the run task payload [JSON Schema](https://github.com/hashicorp/terraform-docs-common/blob/main/website/public/schema/run-tasks/runtask-result.json).

## 2023-09-25

-   Add `intermediate` boolean attribute to the [State Versions API](/terraform/enterprise/api-docs/state-versions).

## 2023-09-19

-   Add [failed state upload recovery](/terraform/enterprise/api-docs/applies#recover-a-failed-state-upload-after-applying) endpoint.

## 2023-09-15

-   Add `auto-destroy-at` attribute to the [Workspaces API](/terraform/enterprise/api-docs/workspaces).
-   Update the [Notification Configurations API](/terraform/enterprise/api-docs/notification-configurations) to include [automatic destroy run](/terraform/enterprise/api-docs/notification-configurations#automatic-destroy-runs) details.

## 2023-09-08

-   Update the [Organizations API](/terraform/enterprise/api-docs/organizations) to include `default-execution-mode` and `default-agent-pool`.
-   Update the [Workspaces API](/terraform/enterprise/api-docs/workspaces) to add a `setting-overwrites` object to allow you to overwrite `default-execution-mode` and `default-agent-pool`.

## 2023-09-06

-   Update Policy Sets API endpoints to create, update, and return excluded workspaces associated with a policy set.
-   Add API endpoints to [Attach a Policy Set](/terraform/enterprise/api-docs/policy-sets#attach-a-policy-set-to-exclusions) and [Detach a Policy Set](/terraform/enterprise/api-docs/policy-sets#detach-a-policy-set-to-exclusions) from excluded workspaces.

## 2023-08-21

-   Add `save-plan` attribute, `planned_and_saved` status, and `save_plan` operation type to [Runs endpoints](/terraform/enterprise/api-docs/run).

## 2023-08-10

-   Add `provisional` to `configuration-versions` endpoint.

## 2023-07-26

-   Add support for a `custom` option to the `team_project` access level along with various customizable permissions. The `project-access` permissions apply to the project itself, and `workspace-access` permissions apply to all workspaces within the project. For more information, see [Project Team Access](/terraform/enterprise/api-docs/project-team-access).

## 2023-06-09

-   Introduce support for [`import` blocks](/terraform/language/import/generating-configuration).
    -   [Runs](/terraform/enterprise/api-docs/run#create-a-run) have a new `allow-config-generation` option.
    -   [Plans](/terraform/enterprise/api-docs/plans#show-a-plan) have new `resource-imports` and `generated-configuration` properties.
    -   [Applies](/terraform/enterprise/api-docs/applies#show-an-apply) have a new `resource-imports` property.
-   The workspaces associated with a policy set can now be updated using the [Policy Sets PATCH endpoint](/terraform/enterprise/api-docs/policy-sets#update-a-policy-set)
-   Update the [Workspaces](/terraform/enterprise/api-docs/workspaces) API endpoints to include the associated [project](/terraform/enterprise/api-docs/projects).

## 2023-05-25

-   Terraform Cloud sets the `configuration_version_download_url`, `configuration_version_id`, and `workspace_working_directory` properties for all stages of the [Run Task Request](/terraform/enterprise/api-docs/run-tasks/run-tasks-integration#request-body).
-   Add the new `enforcement-level` property in the request and response of [Policies endpoints](/terraform/enterprise/api-docs/policies).
-   Deprecate the old `enforce` property in the request and response of [Policies endpoints](/terraform/enterprise/api-docs/policies).
-   Add new properties to limit run tasks and policies for the Terraform Cloud free tier. We updated the [entitlement set](/terraform/enterprise/api-docs/organizations#show-the-entitlement-set), [feature set](/terraform/enterprise/api-docs#feature-entitlements#sample-response), and [subscription](/terraform/enterprise/api-docs/subscriptions#sample-response) endpoints with the following properties:
    -   `run-task-limit`
    -   `run-task-workspace-limit`
    -   `run-task-mandatory-enforcement-limit`
    -   `policy-set-limit`
    -   `policy-limit`
    -   `policy-mandatory-enforcement-limit`
    -   `versioned-policy-set-limit`

## 2023-04-25

-   Add the `version-id` property to the response for the Create, List, and Update [Workspace Variables endpoints](terraform/cloud-docs/api-docs/variables).

## 2023-03-30

-   Add the `sort` query parameter to the Workspaces API's [list workspaces endpoint](/terraform/enterprise/api-docs/workspaces#list-workspaces).

## 2023-03-24

-   Update the [Variable Sets](/terraform/enterprise/api-docs/variable-sets) API endpoints to include assigning variable sets to projects.

## 2023-03-20

-   Add a names filter to the [Projects list API](/terraform/enterprise/api-docs/projects#query-parameters) to allow fetching a list of projects by name.

## 2023-03-13

-   Update [Project Team Access API](/terraform/enterprise/api-docs/project-team-access) to include additional Project roles.
-   Update [Permissions](/terraform/enterprise/users-teams-organizations/permissions) to reflect the decoupling of projects and workspaces in the Organization Permissions UI.

## 2023-03-08

-   Introduced the [GitHub App Installation APIs](/terraform/enterprise/api-docs/github-app-installations).
-   Updated [Workspaces API](/terraform/enterprise/api-docs/workspaces) to accept `vcs-repo.github-app-installation-id` to connect a workspace to a GitHub App Installation.
-   Updated [Registry Module API](/terraform/enterprise/api-docs/private-registry/modules) to accept `vcs-repo.github-app-installation-id` to connect to a GitHub App Installation.
-   Updated [Policy Sets API](/terraform/enterprise/api-docs/policy-sets) to accept `vcs-repo.github-app-installation-id` to connect to a GitHub App Installation.

## 2023-02-16

-   Add `manage-membership` to the organization access settings of the [Team API](/terraform/enterprise/api-docs/teams).

## 2023-02-03

-   Updated the [List Runs API](/terraform/enterprise/api-docs/run#list-runs-in-a-workspace) to note that the filter query parameters accept comma-separated lists.

## 2023-01-18

-   Updated the [Team API](/terraform/enterprise/api-docs/teams) to include the `read-workspaces` and `read-projects` permissions which grants teams view access to workspaces and projects.

## 2023-01-17

-   Add [Projects API](/terraform/enterprise/api-docs/projects) for creating, updating and deleting projects.
-   Add [Project Team Access API](/terraform/enterprise/api-docs/project-team-access) for managing access for teams to individual projects.
-   Update [Workspaces API](/terraform/enterprise/api-docs/workspaces) to include examples of creating a workspace in a project and moving a workspace between projects.
-   Update [List Teams API](/terraform/enterprise/api-docs/teams#query-parameters) to accept a search parameter `q`, so that teams can be searched by name.

## 2023-01-12

-   Added new rollback to previous state endpoint to [State Versions API](/terraform/enterprise/api-docs/state-versions)

## 2022-12-22

-   Updated [Safe Delete a workspace](/terraform/enterprise/api-docs/workspaces#safe-delete-a-workspace) to fix HTTP verb as `POST`.

## 2022-11-18

-   Update [Policies API](/terraform/enterprise/api-docs/policies) to fix policy enforcement level defaults. Enforcement level is a required field, so no defaults are available.

## 2022-11-03

-   Update [Policy Checks](/terraform/enterprise/api-docs/policy-checks) to fix policy set outcome return data type.

### 2022-10-17

-   Updated the [Organizations API](/terraform/enterprise/api-docs/organizations) with the `allow-force-delete-workspaces`, which controls whether workspace administrators can delete workspaces with resources under management.
-   Updated the [Workspaces API](/terraform/enterprise/api-docs/workspaces) with a safe delete endpoint that guards against deleting workspaces that are managing resources.

### 2022-10-12

-   Update [Policy Checks](/terraform/enterprise/api-docs/policy-checks) with result counts and support for filtering policy set outcomes.
-   Update [Team Membership API](/terraform/enterprise/api-docs/team-members) to include adding and removing users from teams using organization membership ID.

<!-- BEGIN: TFC:only name:opa-policies -->

### 2022-10-06

-   Updated the [Policies API](/terraform/enterprise/api-docs/policies) with support for Open Policy Agent (OPA) policies.
-   Update [Policy Sets](/terraform/enterprise/api-docs/policy-sets) with support for OPA policy sets.
-   Updated [Policy Checks](/terraform/enterprise/api-docs/policy-checks) to add support for listing policy evaluations and policy set outcomes.
-   Update [Run Tasks Stage](/terraform/enterprise/api-docs/run-tasks/run-task-stages-and-results) to include the new `policy_evaluations` attribute in the output.
    <!-- END: TFC:only name:opa-policies -->

### 2022-09-21

-   Update [State Versions](/terraform/enterprise/api-docs/state-versions#create) with optional `json-state-outputs` and `json-state` attributes, which are base-64 encoded external JSON representations of the terraform state. The read-only `hosted-json-state-download-url` attribute links to this version of the state file when available.
-   Update [State Version Outputs](/terraform/enterprise/api-docs/state-version-outputs) with a `detailed-type` attribute, which refines the output with the precise Terraform type.

### 2022-07-26

-   Updated the [Run status list](/terraform/enterprise/api-docs/run#run-states) with `fetching`, `queuing`, `pre_plan_running` and `pre_plan_completed`
-   Update [Run Tasks](/terraform/enterprise/api-docs/run-tasks/run-tasks) to include the new `stages` attribute when attaching or updating workspace tasks.
-   Updated [Run Tasks Integration](/terraform/enterprise/api-docs/run-tasks/run-tasks-integration) to specify the different request payloads for different stages.

### 2022-06-23

<!-- BEGIN: TFC:only name:health-assessments -->

-   Added the [Assessments](/terraform/enterprise/api-docs/assessment-results).

-   Updated [Workspace](/terraform/enterprise/api-docs/workspaces#create-a-workspace) and
    [Notification Configurations](/terraform/enterprise/api-docs/notification-configurations#notification-triggers) to account for assessments.
    <!-- END: TFC:only name:health-assessments -->

-   Added new query parameter(s) to [List Runs endpoint](/terraform/enterprise/api-docs/run#list-runs-in-a-workspace).

### 2022-06-21

-   Updated [Admin Organizations](/terraform/enterprise/api-docs/admin/organizations) endpoints with new `workspace-limit` setting. This is available in Terraform Enterprise v202207-1 and later.
-   Updated [List Agent Pools](/terraform/enterprise/api-docs/agents#list-agent-pools) to accept a filter parameter `filter[allowed_workspaces][name]` so that agent pools can be filtered by name of an associated workspace. The given workspace must be allowed to use the agent pool. Refer to [Scoping Agent Pools to Specific Workspaces](/terraform/cloud-docs/agents#scope-an-agent-pool-to-specific-workspaces).
-   Added new `organization-scoped` attribute and `allowed-workspaces` relationship to the request/response body of the below endpoints. This is available in Terraform Enterprise v202207-1 and later.
    -   [Show an Agent Pool](/terraform/enterprise/api-docs/agents#show-an-agent-pool)
    -   [Create an Agent Pool](/terraform/enterprise/api-docs/agents#create-an-agent-pool)
    -   [Update an Agent Pool](/terraform/enterprise/api-docs/agents#update-an-agent-pool)

### 2022-06-17

-   Updated [Creating a Run Task](/terraform/enterprise/workspaces/settings/run-tasks#creating-a-run-task) section to include the new description information for the run task to be configured.
-   Update [Run Tasks](/terraform/enterprise/api-docs/run-tasks/run-tasks) to include the new description attribute.

### 2022-06-09

-   Updated [List Agent Pools](/terraform/enterprise/api-docs/agents#list-agent-pools) to accept a search parameter `q`, so that agent pools can be searched by `name`. This is available in Terraform Enterprise v202207-1 and later.
-   Fixed [List Workspaces](/terraform/enterprise/api-docs/workspaces#list-workspaces) to add missing `search[tags]` query parameter.
-   Updated [List Workspaces](/terraform/enterprise/api-docs/workspaces#list-workspaces) to add new `search[exclude_tags]` query parameter. This is available in Terraform Enterprise v202207-1 and later.

### 2022-05-11

-   Updated Run Tasks permission to the following endpoints:
    -   [Organizations](/terraform/enterprise/api-docs/organizations#list-organizations).
    -   [Team Access](/terraform/enterprise/api-docs/team-access#list-team-access-to-a-workspace).
    -   [Teams](/terraform/enterprise/api-docs/teams#list-teams).

### 2022-05-04

-   Updated [Feature Sets](/terraform/enterprise/api-docs#feature-entitlements#list-feature-sets) to add new `run-tasks` attribute.

### 2022-05-03

-   Added Run Tasks permission to the following endpoints:
    -   [Organizations](/terraform/enterprise/api-docs/organizations#list-organizations)
    -   [Workspaces](/terraform/enterprise/api-docs/workspaces#show-workspace)

### 2022-04-29

-   Updated [Run Tasks Integration](/terraform/enterprise/api-docs/run-tasks/run-tasks-integration) to specify the allowed `status` attribute values.
-   Updated [Organization Memberships](/terraform/enterprise/api-docs/organization-memberships#query-parameters) to add new `filter[email]` query parameter.
-   Updated [Teams](/terraform/enterprise/api-docs/teams#query-parameters) to add new `filter[names]` query parameter.

### 2022-04-04

-   Added the [Run Tasks Integration](/terraform/enterprise/api-docs/run-tasks/run-tasks-integration) endpoint.

### 2022-03-14

-   Added the [Download Configuration Files](/terraform/enterprise/api-docs/configuration-versions#download-configuration-files) endpoints.

### 2022-03-11

-   Introduced [Archiving Configuration Versions](/terraform/enterprise/workspaces/configurations#archiving-configuration-versions).
    -   Updated [Configuration Versions](/terraform/enterprise/api-docs/configuration-versions#attributes) to add new `fetching` and `archived` states.
    -   Updated [Runs](/terraform/enterprise/api-docs/run#attributes) to add new `fetching` state.
    -   Added the [Archive a Configuration Version](/terraform/enterprise/api-docs/configuration-versions#archive-a-configuration-version) endpoint.

### 2022-02-25

-   Updated [Workspace Run Tasks](/terraform/enterprise/api-docs/run-tasks/run-tasks#show-a-run-task) to add new `enabled`attribute.

### 2022-02-28

-   Introduced the [Registry Providers](/terraform/enterprise/api-docs/private-registry/providers) endpoints to manage private providers for a private registry.

### 2021-12-09

-   Added `variables` field for POST /runs and the run resource, enabling run-specific variable values.

### 2021-12-03

-   OAuth API updated to handle `secret` and `rsa_public_key` fields for POST/PUT.

### 2021-11-17

-   Added pagination support to the following endpoints:
    -   [Feature Sets](/terraform/enterprise/api-docs#feature-entitlements#list-feature-sets) - `GET /feature-sets`
    -   [Notification Configurations](/terraform/enterprise/api-docs/notification-configurations#list-notification-configurations) - `GET /workspaces/:workspace_id/notification-configurations`
    -   [Oauth Clients](/terraform/enterprise/api-docs/oauth-clients#list-oauth-clients) - `GET /organizations/:organization_name/oauth-clients`
    -   [Oauth Tokens](/terraform/enterprise/api-docs/oauth-tokens#list-oauth-tokens) - `GET /oauth-clients/:oauth_client_id/oauth-tokens`
    -   [Organization Feature Sets](/terraform/enterprise/api-docs#feature-entitlements#list-feature-sets-for-organization) - `GET /organizations/:organization_name/feature-sets`
    -   [Organizations](/terraform/enterprise/api-docs/organizations#list-organizations) - `GET /organizations`
    -   [Policy Checks](/terraform/enterprise/api-docs/policy-checks#list-policy-checks) - `GET /runs/:run_id/policy-checks`
    -   [Policy Set Parameters](/terraform/enterprise/api-docs/policy-set-params#list-parameters) - `GET /policy-sets/:policy_set_id/parameters`
    -   [SSH Keys](/terraform/enterprise/api-docs/ssh-keys#list-ssh-keys) - `GET /organizations/:organization_name/ssh-keys`
    -   [User Tokens](/terraform/enterprise/api-docs/user-tokens#list-user-tokens) - `GET /users/:user_id/authentication-tokens`

### 2021-11-11

-   Introduced the [Variable Sets](/terraform/enterprise/api-docs/variable-sets) endpoints for viewing and administering Variable Sets

### 2021-11-18

-   Introduced the [Registry Providers](/terraform/enterprise/api-docs/private-registry/providers) endpoint to manage public providers for a
    private registry. These endpoints will be available in the following Terraform Enterprise Release: `v202112-1`

### 2021-09-12

-   Added [Run Tasks Stages and Results](/terraform/enterprise/api-docs/run-tasks/run-task-stages-and-results) endpoint.

### 2021-08-18

-   Introduced the [State Version Outputs](/terraform/enterprise/api-docs/state-versions) endpoint to retrieve the Outputs for a
    given State Version

### 2021-08-11

-   **BREAKING CHANGE:** Security fix to [Configuration versions](/terraform/enterprise/api-docs/configuration-versions): upload-url attribute for [uploading configuration files](/terraform/enterprise/api-docs/configuration-versions#upload-configuration-files) is now only available on the create response.

### 2021-07-30

-   Introduced Workspace Tagging
    -   Updated [Workspaces](/terraform/enterprise/api-docs/workspaces):
        -   added `tag-names` attribute.
        -   added `POST /workspaces/:workspace_id/relationships/tags`
        -   added `DELETE /workspaces/:workspace_id/relationships/tags`
    -   Added [Organization Tags](/terraform/enterprise/api-docs/organization-tags).
    -   Added `tags` attribute to [`tfrun`](/terraform/enterprise/policy-enforcement/sentinel/import/tfrun)

### 2021-07-19

-   [Notification configurations](/terraform/enterprise/api-docs/notification-configurations): Gave organization tokens permission to create and manage notification configurations.

### 2021-07-09

-   [State versions](/terraform/enterprise/api-docs/state-versions): Fixed the ID format for the workspace relationship of a state version. Previously, the reported ID was unusable due to a bug.
-   [Workspaces](/terraform/enterprise/api-docs/workspaces): Added `locked_by` as an includable related resource.
-   Added [Run Tasks](/terraform/enterprise/api-docs/run-tasks/run-tasks) API endpoint.

### 2021-06-8

-   Updated [Registry Module APIs](/terraform/enterprise/api-docs/private-registry/modules).
    -   added `registry_name` scoped APIs.
    -   added `organization_name` scoped APIs.
    -   added [Module List API](/terraform/enterprise/api-docs/private-registry/modules#list-registry-modules-for-an-organization).
    -   updated [Module Delete APIs](/terraform/enterprise/api-docs/private-registry/modules#delete-a-module) (see deprecation note below).
    -   **CLOUD**: added public registry module related APIs.
-   **DEPRECATION**: The following [Registry Module APIs](/terraform/enterprise/api-docs/private-registry/modules) have been replaced with newer apis and will be removed in the future.
    -   The following endpoints to delete modules are replaced with [Module Delete APIs](/terraform/enterprise/api-docs/private-registry/modules#delete-a-module)
        -   `POST /registry-modules/actions/delete/:organization_name/:name/:provider/:version` replaced with `DELETE /organizations/:organization_name/registry-modules/:registry_name/:namespace/:name/:provider/:version`
        -   `POST /registry-modules/actions/delete/:organization_name/:name/:provider` replaced with `DELETE /organizations/:organization_name/registry-modules/:registry_name/:namespace/:name/:provider`
        -   `POST /registry-modules/actions/delete/:organization_name/:name` replaced with `DELETE /organizations/:organization_name/registry-modules/:registry_name/:namespace/:name`
    -   `POST /registry-modules` replaced with [`POST /organizations/:organization_name/registry-modules/vcs`](/terraform/enterprise/api-docs/private-registry/modules#publish-a-private-module-from-a-vcs)
    -   `POST /registry-modules/:organization_name/:name/:provider/versions` replaced with [`POST /organizations/:organization_name/registry-modules/:registry_name/:namespace/:name/:provider/versions`](/terraform/enterprise/api-docs/private-registry/modules#create-a-module-version)
    -   `GET /registry-modules/show/:organization_name/:name/:provider` replaced with [`GET /organizations/:organization_name/registry-modules/:registry_name/:namespace/:name/:provider`](/terraform/enterprise/api-docs/private-registry/modules#get-a-module)

### 2021-05-27

-   **CLOUD**: [Agents](/terraform/enterprise/api-docs/agents): added [delete endpoint](/terraform/enterprise/api-docs/agents#delete-an-agent).

### 2021-05-19

-   [Runs](/terraform/enterprise/api-docs/run): added `refresh`, `refresh-only`, and `replace-addrs` attributes.

### 2021-04-16

-   Introduced [Controlled Remote State Access](https://www.hashicorp.com/blog/announcing-controlled-remote-state-access-for-terraform-cloud-and-enterprise).
    -   [Admin Settings](/terraform/enterprise/api-docs/admin/settings): added `default-remote-state-access` attribute.
    -   [Workspaces](/terraform/enterprise/api-docs/workspaces):
        -   added `global-remote-state` attribute.
        -   added [Remote State Consumers](/terraform/enterprise/api-docs/workspaces#get-remote-state-consumers) relationship.

### 2021-04-13

-   [Teams](/terraform/enterprise/api-docs/teams): added `manage-policy-overrides` property to the `organization-access` attribute.

### 2021-03-23

-   **ENTERPRISE**: `v202103-1` Introduced [Share Modules Across Organizations with Terraform Enterprise](https://www.hashicorp.com/blog/share-modules-across-organizations-terraform-enterprise).
    -   [Admin Organizations](/terraform/enterprise/api-docs/admin/organizations):
        -   added new query parameters to [List all Organizations endpoint](/terraform/enterprise/api-docs/admin/organizations#query-parameters)
        -   added module-consumers link in `relationships` response
        -   added [update module consumers endpoint](/terraform/enterprise/api-docs/admin/organizations#update-an-organization-39-s-module-consumers)
        -   added [list module consumers endpoint](/terraform/enterprise/api-docs/admin/organizations#list-module-consumers-for-an-organization)
    -   [Organizations](/terraform/enterprise/api-docs/organizations): added [Module Producers](/terraform/enterprise/api-docs/organizations#show-module-producers)
    -   **DEPRECATION**: [Admin Module Sharing](/terraform/enterprise/api-docs/admin/module-sharing): is replaced with a new JSON::Api compliant [endpoint](/terraform/enterprise/api-docs/admin/organizations#update-an-organization-39-s-module-consumers)

### 2021-03-18

-   **CLOUD**: Introduced [New Workspace Overview for Terraform Cloud](https://www.hashicorp.com/blog/new-workspace-overview-for-terraform-cloud).
    -   [Workspaces](/terraform/enterprise/api-docs/workspaces):
        -   added `resource-count` and `updated-at` attributes.
        -   added [performance attributes](/terraform/enterprise/api-docs/workspaces#workspace-performance-attributes) (`apply-duration-average`, `plan-duration-average`, `policy-check-failures`, `run-failures`, `workspaces-kpis-run-count`).
        -   added `readme` and `outputs` [related resources](/terraform/enterprise/api-docs/workspaces#available-related-resources).
    -   [Team Access](/terraform/enterprise/api-docs/team-access): updated to support pagination.

### 2021-03-11

-   Added [VCS Events](/terraform/enterprise/api-docs/vcs-events), limited to GitLab.com connections.

### 2021-03-08

-   [Workspaces](/terraform/enterprise/api-docs/workspaces): added `current_configuration_version` and `current_configuration_version.ingress_attributes` as includable related resources.
